# Analogy-cpp-Logging

./: CMakeLists.txt  README.md
proto/: Analogy.grpc.pb.cc  Analogy.grpc.pb.h  Analogy.pb.cc  Analogy.pb.h
src/: GreeterClient.cc  GreeterClient.h  main.cc
